Yeran.K | RESOURCES FEATURES

--- a/templates/code_formatter/define_guidelines.html
+++ b/templates/code_formatter/define_guidelines.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
-
+{% block title %}Define Guidelines{% endblock %}
 {% block sidebar %}
     <div class="sidebar" data-color="black">
         <div class="sidebar-wrapper">
